# cpm-ibc

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
assets/: BobTextureBlue.csv  BobTextureGreen.csv  BobTextureRed.csv  LucySubsamplesX.csv  MobiusStripSubsamples.csv  SurfaceOfRevolutionSubsamples.csv
convergence_studies/: CMakeLists.txt
convergence_studies/HeatProblems/: CMakeLists.txt  HeatProblems.cpp
convergence_studies/HeatProblemsWithIBC/: CMakeLists.txt  HeatProblemsWithIBC.cpp
convergence_studies/PoissonDziukWithDirichletIBC/: CMakeLists.txt  PoissonDziukWithDirichletIBC.cpp
convergence_studies/PoissonProblems/: CMakeLists.txt  PoissonProblems.cpp
convergence_studies/PoissonProblemsWithIBC/: CMakeLists.txt  PoissonProblemsWithIBC.cpp
convergence_studies/ScreenedPoissonDziukWithNeumannIBC/: CMakeLists.txt  ScreenedPoissonDziukWithNeumannIBC.cpp
examples/: CMakeLists.txt
examples/DiffusionCurvesCodimZero/: CMakeLists.txt  DiffusionCurvesCodimZero.cpp
examples/DiffusionCurvesDragon/: CMakeLists.txt  DiffusionCurvesDragon.cpp
examples/DiffusionCurvesMixedCodim/: CMakeLists.txt  DiffusionCurvesMixedCodim.cpp
examples/DiffusionCurvesNefertiti/: CMakeLists.txt  DiffusionCurvesNefertiti.cpp
examples/GeodesicDistanceBeetle/: CMakeLists.txt  GeodesicDistanceBeetle.cpp
examples/GeodesicDistanceDecoTetrahedronCurve/: CMakeLists.txt  GeodesicDistanceDecoTetrahedronCurve.cpp
examples/GeodesicDistanceDzuikPoint/: CMakeLists.txt  GeodesicDistanceDziukPoint.cpp
examples/GeodesicDistanceTorusTrefoil/: CMakeLists.txt  GeodesicDistanceTorusTrefoil.cpp
examples/HarmonicMapBob/: CMakeLists.txt  HarmonicMapBob.cpp
examples/LaplaceTorusTorusKnot/: CMakeLists.txt  LaplaceTorusTorusKnot.cpp
examples/ReactionDiffusionFish/: CMakeLists.txt  ReactionDiffusionFish.cpp
examples/VectorFieldDesignLucy/: CMakeLists.txt  VectorFieldDesignLucy.cpp
examples/VectorFieldDesignMobiusStrip/: CMakeLists.txt  VectorFieldDesignMobiusStrip.cpp
examples/VectorFieldDesignSurfaceOfRevolution/: CMakeLists.txt  VectorFieldDesignSurfaceOfRevolution.cpp
problems/: CMakeLists.txt  GeodesicDistance.cpp  GeodesicDistance.h  GeodesicDistanceNearest.cpp  GeodesicDistanceNearest.h  Heat.cpp  Heat.h  HeatWithIBC.cpp  HeatWithIBC.h  Poisson.cpp  Poisson.h  PoissonWithIBC.cpp  PoissonWithIBC.h  PoissonWithIBCNearest.cpp  PoissonWithIBCNearest.h  ReactionDiffusionWithIBC.cpp  ReactionDiffusionWithIBC.h
src/: BiCGStab.h  BiCGStabSystem.h  BiCGStabVector.h  CMakeLists.txt  CPM_Circle_Rasterizer.h  CPM_Data.h  CPM_Mesh_Rasterizer.h  CPM_Rasterizer.h  CPM_Rasterizer_Test.h  CPM_Shifted_Hemisphere_Rasterizer.h  CPM_Shifted_Sphere_Rasterizer.h  Defines.h  FDMatrices.cpp  FDMatrices.h  GeneralizedBiCGStabSystem.h  Geometry.cpp  Geometry.h  Grid.cpp  Grid.h  Helpers.cpp  Helpers.h  IBCDOFSubset.cpp  IBCDOFSubset.h  IBCMatrixManipulations.cpp  IBCMatrixManipulations.h  IBCMetaData.h  IBCSubset.cpp  IBCSubset.h  IBCSubsets.cpp  IBCSubsets.h  Influence_Iterator.h  Interpolation.cpp  Interpolation.h  Node.cpp  Node.h  SPGrid_Initializer.h  Scalar.h  SimplePolygonMesh.cpp  SimplePolygonMesh.h  Solver.cpp  (+11 more)
